--- a/_posts/2019-03-09-the-of-it.md
+++ b/_posts/2019-03-09-the-of-it.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 'The I do It '
+title: 'The I of It '
 tags: [Echappées]
 featured_image_thumbnail:
 featured_image: assets/images/posts/2019/2019-03-09-the-i-of-it.jpeg
