--- a/_posts/2019-03-17-two-paths.md
+++ b/_posts/2019-03-17-two-paths.md
@@ -14,7 +14,7 @@ featured: true
 
 Forster wrote this final, unsurpassable paragraph about watching your man sleeping--that's why I never really had the courage to write something myself and took pictures instead.
 
-{% include image-caption.html imageurl="assets/images/posts/2019/2019-03-05-untitled-surprised-2.png" 
+{% include image-caption.html imageurl="assets/images/posts/2019/2019-03-17-two-paths.jpeg" 
 title="Untitled" caption="Original Digital Painting" %}
 
 ## Black & White
