--- a/_posts/2019-03-17-two-paths.md
+++ b/_posts/2019-03-17-two-paths.md
@@ -8,14 +8,14 @@ author: rve
 featured: true
 ---
 
-{% include image-wide.html imageurl="assets/images/posts/2019/2019-03-17-two-paths.jpeg" title="Untitled" caption="Untitled. Direct print on 2-mm thick, ultra-clear glass." %}
+{% include image-wide.html imageurl="assets/images/posts/2019/2019-03-17-two-paths-2.jpeg" title="Sleep Pattern — Variations" caption="Sleep Pattern — Variations" %}
 
 *The boy, who had been to a dance the night before, remained asleep. He lay with his limbs uncovered. He lay unashamed, embraced and penetrated by the sun. The lips were parted, the down on the upper was touched with gold, the hair broken into countless glories, the body was a delicate amber. To anyone he would have seemed beautiful, and to Maurice who reached him by two paths he became the World's desire.* (E.M. Forster, in *Maurice*, 1913)
 
 Forster wrote this final, unsurpassable paragraph about watching your man sleeping--that's why I never really had the courage to write something myself and took pictures instead.
 
-{% include image-caption.html imageurl="assets/images/posts/2019/2019-03-17-two-paths.jpeg" 
-title="Untitled" caption="Original Digital Painting" %}
+{% include image-caption.html imageurl="assets/images/posts/2019/2019-03-17-two-paths-3.jpeg" 
+title="Untitled" caption="Sleep Pattern" %}
 
 ## Black & White
 
